  installed directly to `$BINDIR/ocamlmklib`; `ocamlmklib.byte` and
  `ocamlmklib.opt` are no longer installed to `$BINDIR`.
  (Xavier Leroy, review by Gabriel Scherer)

- #12006: use compressed marshaled format for .cmi, .cmt, .cmti files,
  and for debug info in .cmo and .cma files, resulting in major
  reduction in size.
  (Xavier Leroy, review by Edwin Török and Gabriel Scherer)


### Manual and documentation:

- #9430, #11291: Document the general desugaring rules for binding operators.
  (Gabriel Scherer, review by Nicolás Ojeda Bär)

- #11481: Fix the type of Unix.umask to Unix.file_perm -> Unix.file_perm
  (Favonia, review by Sébastien Hinderer)

- #11676: Fix missing since annotation in the `Sys` and `Format` modules
  (Github user Bukolab99, review by Florian Angeletti)

- #12028: Update format documentation to make it clearer that
  `pp_print_newline` flushes its newline
  (Florian Angeletti, review by Gabriel Scherer)

### Compiler user-interface and warnings:

- #11679: Improve the error message about too many arguments to a function
  (Jules Aguillon, review by Gabriel Scherer and Florian Angeletti)

- #10009: Improve the error reported by mismatched struct/sig and =/: in module
  and module type bindings.
  (Jules Aguillon, review by Gabriel Scherer)

- #11530: Include kinds in kind mismatch error message.
  (Leonhard Markert, review by Gabriel Scherer and Florian Angeletti)

- #10818: Preserve integer literal formatting in type hint.
  (Leonhard Markert, review by Gabriel Scherer and Florian Angeletti)

- #11338: Turn some partial application warnings into hints.
  (Leo White, review by Stephen Dolan)

- #10931: Improve warning 14 (illegal backslash) with a better explanation
  of the causes and how to fix it.
  (David Allsopp, Florian Angeletti, Lucas De Angelis, Gabriel Scherer,
  review by Nicolás Ojeda Bär, Florian Angeletti, David Allsopp and
  Gabriel Scherer)

- #10911: Improve the location reported by parenthesized assert expressions