@@ -328,6 +328,10 @@ Working version
   reduction in size.
   (Xavier Leroy, review by Edwin Török and Gabriel Scherer)
 
+- #11718: ocamlyacc: OCaml-style comments are now supported, in addition to
+  the C-style comments already supported.  The syntax is the same as that used
+  in OCaml code.
+  (Demi Marie Obenour, review by Damien Doligez)
 
 ### Manual and documentation:
 
